--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
       name="description"
       content="AMM dapp created for Patika-BNB Course by Abdulhakim Altunkaya"
     />
-
-    <title>AMM App for Patika-BNB Course</title>
+    <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+    <title>PandaSwap</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
   </body>
